# ExcellentInsight

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  openapi.json  package-lock.json  package.json  peek_job.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0000000000_create_all_tables.py  1c10e82396fe_add_missing_indexes_for_query_.py  2b2ca9ae2f76_add_api_keys_table.py  4827f0ecff5d_initial_schema_with_timezone_aware_.py  add_dashboard_shares_table.py
app/: __init__.py  config.py  dependencies.py  main.py
app/api/: auth.py  dashboard.py  jobs.py  router.py  settings.py  shares.py  upload.py  users.py
app/db/: serialization.py  session.py  tenant.py
app/llm/: __init__.py  client.py  openrouter_client.py
app/middleware/: compression.py  error_handler.py  exception_handlers.py  rate_limit.py  request_id.py
app/models/: __init__.py  api_key.py  base.py  job.py  job_transition.py  organization.py  pipeline_state.py  pipeline_telemetry.py  share.py  user.py
app/pipeline/: __init__.py  dashboard_builder.py  formula_engine.py  llm_enricher.py  orchestrator.py  parser.py  pipeline_steps.py  schema_detector.py  stats_engine.py  step_base.py  step_registry.py  steps.py  subpipelines.py
app/schemas/: auth.py  dashboard.py  errors.py  job.py  retry.py  settings.py  upload.py  users.py
app/services/: auth_service.py  job_service.py
app/storage/: __init__.py  base.py  local_storage.py
app/utils/: cdn.py  circuit_breaker.py  columns.py  export.py  llm_validation.py  logger.py  sanitization.py  security.py
app/workers/: queue_config.py  settings.py
docs/: API.md  ARCHITECTURE.md  FEATURES.md
frontend/: .dockerignore  Dockerfile  IMPROVEMENTS.md  QUICK_START.md  env.local.placeholder  eslint.config.mjs  lint-errors.txt  next.config.ts  package-lock.json  package.json  test_axios.js  tsc-errors.txt  tsconfig.json  vitest.config.ts  vitest.setup.ts
frontend/__tests__/components/: ChartErrorBoundary.test.tsx
frontend/__tests__/hooks/: useJobProgress.test.ts
frontend/__tests__/lib/: api.test.ts
frontend/app/: error.tsx  globals.css  landing-client.tsx  layout.tsx  not-found.tsx  page.tsx  sitemap.ts
frontend/app/(app)/: layout.tsx
frontend/app/(auth)/: layout.tsx
frontend/components/: ErrorBoundary.tsx
frontend/hooks/: useJobProgress.ts
frontend/lib/: api.ts  chart-colors.ts  format.ts  performance.ts  query-provider.tsx
frontend/public/: robots.txt
frontend/stores/: auth-store.ts  job-store.ts
frontend/types/: dashboard.ts  event-source-polyfill.d.ts
migrations/: enable_rls.sql
scripts/: cleanup_data.py  init_db.py
tests/: conftest.py  test_api_integration.py  test_audit_fixes_pipeline.py  test_audit_fixes_security.py  test_auth.py  test_correlation_insights.py  test_dashboard_builder.py  test_formula_engine.py  test_llm_enricher.py  test_llm_validation.py  test_orchestrator.py  test_parser.py
(+40 files in other folders)
